src/objects/QuoteProductBundle__c.object
<CustomObject>
    <description>TFUS-000004537 
Junction object to tie Quotes and Bundles/Promotions/Offers together. Used for Bundle and promotion selling - guided selling and structured pricing around promotions</description>
    <fields>
        <fullName>BundleOfferDiscountAmount__c</fullName>
        <description>Shows the Total Discount Amount of the Bundle or Offer</description>
        <formula>ProductBundle__r.Total_Discount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Shows the Total Discount Amount of the Bundle or Offer</inlineHelpText>
        <label>Bundle/Offer Discount Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BundlePrice__c</fullName>
        <formula>ProductBundle__r.Total_price__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Bundle Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ProductBundle__c</fullName>
        <label>Product Bundle</label>
        <referenceTo>Product_bundle__c</referenceTo>
        <relationshipName>Quote_Product_Bundles</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Quantity__c</fullName>
        <defaultValue>1</defaultValue>
        <label>Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Quote__c</fullName>
        <label>Quote</label>
        <referenceTo>Quote</referenceTo>
        <relationshipName>Quote_Product_Bundles</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Quote Line Bundle</label>
    <nameField>
        <displayFormat>QLB-{0000}</displayFormat>
        <label>Quote Line Bundle #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Quote Line Bundles</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>doNotAllowQuoteLineBundlesEdit</fullName>
        <active>true</active>
        <description>Certain fields of the Quote Line Bundles cannot be modified</description>
        <errorConditionFormula>AND(
$Setup.GlobalBypassProcessesSettings__c.RunValidationRules__c,
OR (ISCHANGED(Quantity__c), ISCHANGED( CurrencyIsoCode ))
)</errorConditionFormula>
        <errorMessage>Quote Line bundles cannot be modified.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>mustHaveTheSamePricebook</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
$Setup.GlobalBypassProcessesSettings__c.RunValidationRules__c,
Quote__r.Pricebook2Id &lt;&gt;  ProductBundle__r.Price_Book__c)</errorConditionFormula>
        <errorDisplayField>ProductBundle__c</errorDisplayField>
        <errorMessage>Please select a product bundle associated with the same price book as the quote.</errorMessage>
    </validationRules>
</CustomObject>